<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/workout_color_bg"
    tools:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/imageView"
            android:layout_width="411dp"
            android:layout_height="240dp"
            app:srcCompat="@drawable/bg"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_cred"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/ET_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/eg_john"
                        android:inputType="textPersonName"
                        android:backgroundTint="@color/teal_200"
                        />
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        >
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/ET_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:backgroundTint="@color/teal_200"
                            />
                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/submit"
                            android:layout_marginTop="16dp"
                            >
                        </androidx.appcompat.widget.AppCompatButton>
                    </com.google.android.material.textfield.TextInputLayout>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notamember"
            android:gravity="center"
            android:textSize="16sp"

            />
        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:backgroundTint="@color/teal_200"
            />
    </LinearLayout>

</LinearLayout>